--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <script>
         function preventUseOfDefaultKeys(event) {
-            if (event.keyCode == 32) // spacebar
+            if (event.keyCode == 32 || event.keyCode == 38 || event.keyCode == 40) // spacebar, up, down
             {
                 event.preventDefault();
             }
